# TerminalFX

./: .gitignore  LICENSE  LICENSES  README.md  pyproject.toml
examples/: blink_example.py  bounce_example.py  dots_example.py  gradient_example.py  reverse_typewriter_example.py  scroll_left_example.py  scroll_right_example.py  test.py  typewriter_example.py  wave_example.py
terminalfx/: __init__.py  colors.py  constants.py  effects.py  palettes.py  text.py  utils.py  validators.py
test/: test.py  test2.py
