[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalfx"
version = "0.1.0"
description = "A Python library for beautiful terminal text animations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Sayyad Afzal", email = "sayyadafzal100@gmail.com" }
]

keywords = [
    "terminal",
    "animation",
    "text",
    "cli",
    "effects",
    "terminal vfx"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["terminalfx"]